[package]
name = "qq_msg_convert_core_r"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# BASE64 编码解码
base64 = { version = "0.21.2" }

# 获取 CPU 核心数
num_cpus = { version = "1.16.0" }

# 时间模块
time = { version = "0.3.23" }

# 遍历目录
walkdir = { version = "2.3.3" }

# 线程池
threadpool = { version = "1.8.1" }

# ini 配置文件读写
rust-ini = "0.19.0"